= Change Log

== 0.2
* Added README and CHANGELOG

== 0.1 (2009-10-18)
* The first release